Test Data/BPP/BPP-MELA-2/outputs/bpp-black_box/2025-07-19_18-24-20/problem_iter1_stdout_24_cand1.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/bpp/main.py", line 9, in <module>
    import gpt
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\bpp\gpt.py", line 9
    h *= (weights.reshape(-1,1) + weights.reshape(1,-1) <= node_constraint  # Apply constraint
         ^
SyntaxError: '(' was never closed
